add composer files

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "seta0909/laravel-tw-streetname",
     "description": "",
+    "license": "MIT",
     "authors": [
         {
             "name": "seta0909",
