add composer files

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "seta0909/laravel-tw-streetname",
     "description": "",
     "license": "MIT",
+    "version": "0.0.1",
     "authors": [
         {
             "name": "seta0909",
